--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "x.x.x",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
