--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
+    "path-browserify": "^1.0.1",
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -28,12 +29,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-
+  "start": "react-app-rewired start",
+  "build": "react-app-rewired build",
+  "test": "react-app-rewired test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-app-rewired": "^2.2.1"
   }
 }
