--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "pg": "^8.12.0",
     "react": "^18.3.1",
@@ -29,11 +30,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-app-rewired start",
-  "build": "react-app-rewired build",
-  "test": "react-app-rewired test",
-  "eject": "react-scripts eject"
-},
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
