--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,21 @@
-
 {
     "version": 2,
-    "builds": 
-    [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
+    "builds": [
+      {
+        "src": "api/**/*.js",
+        "use": "@vercel/node"
+      }
     ],
-        "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        }
+    "functions": {
+      "api/**/*.js": {
+        "maxDuration": 10
+      }
+    },
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
-}
+  }
+  
