--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
-    ],
     "functions": {
-      "api/**/*.js": {
-        "maxDuration": 10
+      "server.js": {
+        "maxDuration": 10 
       }
     },
     "routes": [
